tests/incremental_haste_phantom/incremental_haste_phantom.exp

Initial status:
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:3:2
   3| (foo: empty);
       ^^^

References:
   node_modules/foo.js:2:18
   2| module.exports = 0;
                       ^ [1]
   test.js:3:7
   3| (foo: empty);
            ^^^^^ [2]



Found 1 error

Introduce haste module "foo"
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:3:2
   3| (foo: empty);
       ^^^

References:
   foo.js:3:18
   3| module.exports = "";
                       ^^ [1]
   test.js:3:7
   3| (foo: empty);
            ^^^^^ [2]



Found 1 error

Remove haste module "foo"
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `foo` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:3:2
   3| (foo: empty);
       ^^^

References:
   node_modules/foo.js:2:18
   2| module.exports = 0;
                       ^ [1]
   test.js:3:7
   3| (foo: empty);
            ^^^^^ [2]



Found 1 error

Done!
